// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`link lifts recursive dependency 1`] = `
"#version 450
//// @link getLifted _00_


    // Lifted Code
    void _00_getLifted() {}
    
//// @link getColor2 _01_


    vec4 _01_getColor2() { return vec4(1.0, 0.0, 1.0, 1.0); }
    
//// @link getColor1 _02_


    vec4 _02_getColor1() { return _01_getColor2(); }
    
//// @link main 


    void main() {
      gl_FragColor = _02_getColor1();
    }
    "
`;

exports[`link links a global across a module 1`] = `
"#version 450
//// @link sub1 _00_


    vec4 getPosition(int index) { return vec4(1.0, 0.0, 1.0, 1.0); }
    
//// @link sub2 _01_


    void _01_getPosition() {};

    vec4 _01_getColor(int index) {
      _01_getPosition();
      return vec4(1.0, 0.0, 1.0, 1.0);
    }
    
//// @link main 


    vec4 getPosition(int index);
    void main() {
      vec4 a = getPosition(0);
    }
    "
`;

exports[`link links an external 1`] = `
"#version 450
//// @link getColor _00_


    vec4 _00_getColor() { return vec4(1.0, 0.0, 1.0, 1.0); }
    
//// @link main 


    vec4 _00_getColor();
    void main() {
      vec4 v;
      v.xyz = vec3(1.0, 0.0, 0.0);
      gl_FragColor = _00_getColor();
    }
    "
`;

exports[`link links quad vertex 1`] = `
"#version 450
//// @link <inline code> _00_


    vec4 _00_getPosition(int index) { return vec4(1.0, 0.0, 1.0, 1.0); }
    
//// @link <inline code> _01_


    vec4 _01_getColor(int index) { return vec4(1.0, 0.0, 1.0, 1.0); }
    
//// @link <inline code> _02_


    float _02_getSize(int index) { return 1.0; }
    
//// @link <inline code> _03_


    float _03_getDepth(int index) { return 0.5; }
    
//// @link use/types _04_

struct _04_SolidVertex {
  vec4 position;
  vec4 color;
  vec2 uv;
};


//// @link use/view _05_

layout(set = VIEW_BINDGROUP, binding = VIEW_BINDING) uniform _05_ViewUniforms {
  mat4 projectionMatrix;
  mat4 viewMatrix;
  vec4 viewPosition;
  vec2 viewResolution;
  vec2 viewSize;
  float viewWorldScale;
  float viewPixelRatio;
} _05_viewUniforms;

vec4 _05_worldToView(vec4 position) {
  return _05_viewUniforms.viewMatrix * position;
}

vec4 _05_viewToClip(vec4 position) {
  return _05_viewUniforms.projectionMatrix * position;
}

vec4 _05_worldToClip(vec4 position) {
  return _05_viewToClip(_05_worldToView(position));
}

float _05_getPerspectiveScale(float w, float f) {
  mat4 m = _05_viewUniforms.projectionMatrix;
  float worldScale = m[1][1] * _05_viewUniforms.viewWorldScale;
  float clipScale = mix(1.0, worldScale / w, f);
  float pixelScale = clipScale * _05_viewUniforms.viewPixelRatio;
  return pixelScale;
}

//// @link geometry/quad _06_

const ivec2 _06_QUAD[] = {
  ivec2(0, 0),
  ivec2(1, 0),
  ivec2(0, 1),
  ivec2(1, 1),
};

ivec2 _06_getQuadIndex(int vertex) {
  return _06_QUAD[vertex];
}

vec2 _06_getQuadUV(int vertex) {
  return vec2(_06_getQuadIndex(vertex));
}

//// @link getQuadVertex 

vec4 _00_getPosition(int);
vec4 _01_getColor(int);
vec2 _02_getSize(int);
float _03_getDepth(int);

_04_SolidVertex getQuadVertex(int vertexIndex, int instanceIndex) {
  vec4 position = _00_getPosition(instanceIndex);
  vec4 color = _01_getColor(instanceIndex);
  vec2 size = _02_getSize(instanceIndex);
  float depth = _03_getDepth(instanceIndex);

  vec4 center = _05_worldToClip(position);

  vec2 uv = _06_getQuadUV(vertexIndex);
  vec2 xy = uv * 2.0 - 1.0;
  
  // Lerp between fixed size and full perspective.
  float pixelScale = _05_getPerspectiveScale(center.w, depth);
  size *= pixelScale;

  #ifdef HAS_EDGE_BLEED
  xy = xy * (size + 0.5) / size;
  uv = xy * .5 + .5;
  #endif

  center.xy += xy * size * _05_viewUniforms.viewResolution * center.w;

  return _04_SolidVertex(
    center,
    color,
    uv
  );
}"
`;

exports[`link links same module twice with different entry point 1`] = `
"#version 450
//// @link sub _00_


    float _00_used() { return 1.0; }

    vec4 _00_getPosition(int index) { return vec4(_00_used(), 0.0, 1.0, 1.0); }

    vec4 _00_getColor(int index) { return vec4(_00_used(), 0.0, 1.0, 1.0); }
    
//// @link main 


    vec4 _00_getPosition(int index);
    vec4 _00_getColor(int index);
    void main() {
      vec4 a = _00_getPosition(0);
      vec4 b = _00_getColor(0);
    }
    "
`;

exports[`link tree shakes around identifiers 1`] = `
"#version 450
//// @link sub _00_


    float _00_used() { return 1.0; }

    vec4 _00_getPosition(int index) { return vec4(_00_used(), 0.0, 1.0, 1.0); }

    
//// @link main 


    vec4 _00_getPosition(int index);
    void main() {
      vec4 a = _00_getPosition(0);
    }
    "
`;

exports[`link tree shakes around identifiers 2`] = `
"#version 450
//// @link sub _00_


    float _00_used() { return 1.0; }

    vec4 _00_getPosition(int index) { return vec4(_00_used(), 0.0, 1.0, 1.0); }

    
//// @link main 


    vec4 _00_getPosition(int index);
    void main() {
      vec4 a = _00_getPosition(0);
    }
    "
`;

exports[`link tree shakes constants 1`] = `
"#version 450
//// @link sub _00_


    const vec4 _00_colorUsed = vec4(0.0, 0.1, 0.2, 0.0);
    vec4 _00_getColor() {
      return _00_colorUsed;
    }
    
//// @link main 


    vec4 _00_getColor();
    void main() {
      vec4 a = _00_getColor();
    }
    "
`;

exports[`link tree shakes constants 2`] = `
"#version 450
//// @link sub _00_


    const vec4 _00_colorUsed = vec4(0.0, 0.1, 0.2, 0.0);
    vec4 _00_getColor() {
      return _00_colorUsed;
    }
    
//// @link main 


    vec4 _00_getColor();
    void main() {
      vec4 a = _00_getColor();
    }
    "
`;
